index.html - removed link to theme and styling.  style.css - added media queries for different backgrounds at different viewport widths, fixed bug where bottom nav would overlap card btn(s)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,16 +8,52 @@
     right: -50px;
     display: none;
     background-color: #333;
-    opacity: 40%;
+    opacity: .75;
 }
 
 .card {
     width: 70%;
+    margin-top: 50rem;
+}
+
+#contentDiv{
+    padding-bottom: 5rem;
 }
 
 .fixed-bottom {
-    margin-top: 2rem;
     margin-bottom: 0rem;
     border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px;
+}
+
+body {
+    background-color: pink;
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+    body {
+        background-color: #F00;
+    }
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+    body {
+        background-color: #0F0;
+    }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+    body {
+        background-color: #00F;
+    }
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+    body {
+        background-color: #333;
+    }
 }
